fixed left margin on bottom bar, fixed double border on nav tabs

--- a/src/angular-merge.styl
+++ b/src/angular-merge.styl
@@ -4,6 +4,9 @@
   flex-direction column
   min-width 450px
 
+  .nav-tabs
+    margin-bottom -1px
+
   #mergely-editor
     flex 1
     display flex
@@ -32,6 +35,7 @@
 
   .merge-bottom-bar
     clear both
+    margin-left 42px
 
   .merge-btn-container
     display flex
